--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>This is a paragraph</h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam eum, obcaecati voluptatum expedita nemo delectus excepturi rerum tempora sunt quo in. Provident quia iusto corrupti maiores autem suscipit beatae est!
+    </p>
 </body>
 </html>
